# 42-matcha

./: .eslintcache  .gitignore  README.md  author  package-lock.json  package.json
matcha-backend/: .env  .gitignore  Cargo.toml
matcha-backend/images/: amy2  amy3  charles1  charles2  charles3  gina1  gina2  gina3  hitchcock1  hitchcock2  hitchcock3  holt1  holt3  jake1  jake2  jake3  rosa1  rosa2  rosa3  scully1  scully2  scully3  terry1  terry2  terry3
matcha-backend/src/: errors.rs  main.rs
matcha-backend/src/api/controllers/: browse.rs  chat.rs  heartbeat.rs  matches.rs  mod.rs  notification.rs  profile.rs  research.rs  user.rs
matcha-backend/src/application/: mod.rs
matcha-backend/src/application/browse/: mod.rs
matcha-backend/src/application/chat/: client.rs  mod.rs  server.rs
matcha-backend/src/application/heartbeat/: mod.rs
matcha-backend/src/application/matches/: mod.rs
matcha-backend/src/application/notification/: mod.rs
matcha-backend/src/application/profile/: create.rs  image.rs  interest.rs  location.rs  mod.rs  utils.rs
matcha-backend/src/application/research/: mod.rs
matcha-backend/src/application/user/: change_credentials.rs  credentials.rs  current.rs  login.rs  mod.rs  password.rs  register.rs  verify.rs
matcha-backend/src/database/: api.rs  cursor.rs  mod.rs  seed_data.rs  setup.rs
matcha-backend/src/infrastructure/: mod.rs
matcha-backend/src/infrastructure/image/: image_accessor.rs  mod.rs
matcha-backend/src/infrastructure/security/: jwt.rs
matcha-backend/src/models/: base.rs  block.rs  chat.rs  chat_connection.rs  dbmodel.rs  image.rs  interest.rs  like.rs  location.rs  mod.rs  notification.rs  profile.rs  report.rs  user.rs  visit.rs
matcha-backend/src/tests/: init.rs  login.rs  mod.rs  profile.rs  register.rs  test_models.rs
matcha-front/: .eslintcache
matcha-front/src/: index.tsx  testProfiles1.json
matcha-frontend/: .prettierrc  deploy.sh  package-lock.json  package.json  tsconfig.json
matcha-frontend-old/: .eslintcache  package-lock.json  package.json
matcha-frontend-old/src/: App.css  App.js
src/: App.css  App.js  testProfiles1.json  testprofiles.json
(+135 files in other folders)
