[package]
name = "matcha-backend"
version = "0.1.0"
authors = ["Pekka Tuukkanen <petuukka@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-cors = "0.5.4"
dotenv = "0.15.0"
serde = "1.0.118"
serde_json = "1.0"
derive_more = "0.99.11"
lettre = "0.9"
lettre_email = "0.9"
sodiumoxide = "0.2.6"
nanoid = "0.3.0"
