[package]
name = "matcha-backend"
version = "0.1.0"
authors = ["Pekka Tuukkanen <petuukka@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10.0"
actix-rt = "1.1.1"
actix-web = "3.3.2"
actix-web-actors = "3.0.0"
actix-cors = "0.5.4"
dotenv = "0.15.0"
serde = "1.0.118"
derive_more = "0.99.11"
lettre = "0.9"
lettre_email = "0.9"
sodiumoxide = "0.2.6"
nanoid = "0.3.0"
jsonwebtoken = "7"
log = "0.4.14"
env_logger = "0.8.3"
awmp = "0.6.0"
actix-web-validator = "2.0.3"
validator = { version = "0.12", features = ["derive"] }
actix-files = "0.5.0"
regex = "1.4.5"
serde_json = "1.0"
serde_with_macros = "1.4.1"
chrono = "0.4"
chrono-humanize = "0.1.2"
rand = "0.7"

[dev-dependencies]
lazy_static = "1.4.0"
async-mutex = "1.4.0"
